# novel-llm

./: .env.example  .gitignore  AutoDL远程微调全流程指南.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  项目执行规划.md
configs/: constraint_rules.yaml  ds_z2.json  ds_z3.json  genre_config.yaml  model_config.yaml
data/clean/全职艺术家/: chapter_001.txt  chapter_002.txt  chapter_003.txt  chapter_004.txt  chapter_005.txt  chapter_006.txt  chapter_007.txt  chapter_008.txt  chapter_009.txt  chapter_010.txt  chapter_011.txt  chapter_012.txt  chapter_013.txt  chapter_014.txt  chapter_015.txt  chapter_016.txt  chapter_017.txt  chapter_018.txt  chapter_019.txt  chapter_020.txt  chapter_021.txt  chapter_022.txt  chapter_023.txt  chapter_024.txt  chapter_025.txt  chapter_026.txt  chapter_027.txt  chapter_028.txt  chapter_029.txt  chapter_030.txt  chapter_031.txt  chapter_032.txt  chapter_033.txt  chapter_034.txt  chapter_035.txt  chapter_036.txt  chapter_037.txt  chapter_038.txt  chapter_039.txt  chapter_040.txt  (+1057 more)
data/clean/那年华娱/: chapter_001.txt  chapter_002.txt  chapter_003.txt  chapter_004.txt  chapter_006.txt  chapter_007.txt  chapter_008.txt  chapter_009.txt  (+999 more)
models/lora_adapters_test/: README.md
scripts/: evaluate_novel.py  generate_novel.py  human_review.py  merge_lora.py
src/: env.py
src/constraints/: chapter_generator.py  llm_validator.py  outline_planner.py
src/data_pipeline/: cleaner.py  collector.py  llm_annotator.py  sft_data_builder.py
src/rag/: embedding.py  knowledge_retriever.py  style_retriever.py
src/training/: grpo_train.py  sft_train.py
(+5 files in other folders)
