[project]
name = "novel-llm"
version = "0.1.0"
description = "都市文娱小说生成系统 — 基于Qwen3 LoRA微调 + GRPO强化学习"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "JoshuaYipu" }]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"src" = "src"
